objects/Benefit_Agreement__c.object
<CustomObject>
    <description>Benefit Agreement information offered to the employees for the Group Account will be stored using this object</description>
    <fields>
        <fullName>ACA_Fee__c</fullName>
        <label>ACA Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACA_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACA Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Census__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Census</label>
        <referenceTo>SGR_Account_Census__c</referenceTo>
        <relationshipLabel>Benefit Agreements</relationshipLabel>
        <relationshipName>Benefit_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_data_load__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created to load the relationship using the dataloader</description>
        <label>Account data load</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benefit Agreements (Account data load)</relationshipLabel>
        <relationshipName>Benefit_Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age_Bracket_Meth_Code__c</fullName>
        <label>Age Bracket Meth Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automated_Eligibility_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if a Benefit Agreement falls under the Automated Eligibility Process.</description>
        <label>Automated Eligibility Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BA_USER_DISPL_NBR__c</fullName>
        <label>BA USER DISPL NBR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Number__c</fullName>
        <description>This field is used to capture the number of the Benefit Agreement as listed in BlueStar</description>
        <label>Benefit Agreement Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>This field is used to capture the business type for the Benefit Agreement.</description>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Cede</fullName>
                </value>
                <value>
                    <fullName>Slice</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Code__c</fullName>
        <description>This field is used to capture the BlueStar - Code indicating the reason for a cancellation or reinstatement initiated at the Benefit Agreement level.</description>
        <label>Cancellation/Reinstatement Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CBA – Cancel Benefit Agreement</fullName>
                </value>
                <value>
                    <fullName>RBA - Reinstatement Benefit Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <description>This field is used to capture the cancellation or reinstatement date of the Benefit Agreement as listed in BlueStar</description>
        <label>Cancellation/Reinstatement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Explanation__c</fullName>
        <description>This field is used to capture the explanation for cancellation or reinstatement request.</description>
        <label>Cancellation/Reinstatement Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <description>This field is used to capture the reason why a Benefit Agreement is being cancelled or reinstated.</description>
        <label>Cancellation/Reinstatement Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>404 Misc - Grp Moved Out of State</fullName>
                </value>
                <value>
                    <fullName>452 Acct Moving Ind Prod</fullName>
                </value>
                <value>
                    <fullName>45 - Rate Increase</fullName>
                </value>
                <value>
                    <fullName>707 Rates - General</fullName>
                </value>
                <value>
                    <fullName>709 Rates - Large Rate Increase</fullName>
                </value>
                <value>
                    <fullName>401 Misc - Below Percentage</fullName>
                </value>
                <value>
                    <fullName>402 Misc - Reason/Unknown</fullName>
                </value>
                <value>
                    <fullName>403 Misc - Non-Payment of Dues</fullName>
                </value>
                <value>
                    <fullName>405 Misc - Never Effective</fullName>
                </value>
                <value>
                    <fullName>406 Misc - New Group Number</fullName>
                </value>
                <value>
                    <fullName>408 Misc - Other UW Requirements</fullName>
                </value>
                <value>
                    <fullName>409 Misc - Acct has 0 Subs</fullName>
                </value>
                <value>
                    <fullName>410 Misc - Coverage Discontinued</fullName>
                </value>
                <value>
                    <fullName>411 Misc - New Decision Maker</fullName>
                </value>
                <value>
                    <fullName>412 Misc - Trans to Existing Acct</fullName>
                </value>
                <value>
                    <fullName>413 Misc - Broker Recommendation</fullName>
                </value>
                <value>
                    <fullName>414 Misc - Cons Cov w/1+ Carrier</fullName>
                </value>
                <value>
                    <fullName>415 Moved to Other BCBS Plan</fullName>
                </value>
                <value>
                    <fullName>416 Misc - Owner Chg/Merg/Acq</fullName>
                </value>
                <value>
                    <fullName>417 Misc - Parent Co Decision</fullName>
                </value>
                <value>
                    <fullName>418 Misc - Absorbed by ParentGrp</fullName>
                </value>
                <value>
                    <fullName>419 Misc - Out-of-Business</fullName>
                </value>
                <value>
                    <fullName>427 Misc - Political</fullName>
                </value>
                <value>
                    <fullName>433 Misc - Trans Due to Ben Chg</fullName>
                </value>
                <value>
                    <fullName>436 Misc - Changed Brokers</fullName>
                </value>
                <value>
                    <fullName>501 Claims - Service/Problems</fullName>
                </value>
                <value>
                    <fullName>502 Mbrship - Billing Serv/Prob</fullName>
                </value>
                <value>
                    <fullName>503 Service - Local Office</fullName>
                </value>
                <value>
                    <fullName>504 Service - Customer Service</fullName>
                </value>
                <value>
                    <fullName>608 Network - PPO/POS Hospital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Status__c</fullName>
        <description>This field is used to capture the status of a cancellation or reinstatement request for the Benefit Agreement.</description>
        <label>Cancellation/Reinstatement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cancellation Rejected</fullName>
                </value>
                <value>
                    <fullName>Requested Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Submitted_Date__c</fullName>
        <description>This field is used to capture the date when the cancellation or reinstatement request was submitted.</description>
        <label>Cancellation/Reinstatement Submitted Dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ComplexityScoreCoverage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Hidden Complexity Score field to hold the point value for related Coverages</description>
        <label>ComplexityScoreCoverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contracts__c</fullName>
        <description>This field is no longer used.</description>
        <label>Contracts</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corp_Product_Number__c</fullName>
        <label>Corp Product Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_Tier_Number__c</fullName>
        <label>Corp Tier Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coverages__c</fullName>
        <description>This field is used to capture the coverages associated to the Benefit Agreement as listed in BlueStar (all coverages are separated by a space)</description>
        <label>Coverages</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dental_Rate_Structure_Type__c</fullName>
        <description>This field is used to capture the dental rate structure type.</description>
        <label>Dental Rate Structure Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Number__c</fullName>
        <description>This field is used to capture the department number associated to the Benefit Agreement.</description>
        <label>Department Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field is used to capture a description for the Benefit Agreement as listed in BlueStar</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if domestic partner applies to the Benefit Agreement as listed in BlueStar</description>
        <label>Domestic Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drug_Blue_Script__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if a Benefit Agreement does not offer Rx (&quot;Y&quot; indicates that it does not offer Rx).</description>
        <label>Drug Blue Script</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERISA_Code_Effective_Date__c</fullName>
        <description>This field is used to capture the date the ERISA code is effective as listed in BlueStar (defaults to the new group effective date)</description>
        <label>ERISA Code Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ERISA_Code__c</fullName>
        <description>This field is used to capture the ERISA Status as listed in BlueStar: AP = ERISA applies to plan, EX = Exempt, PE = Pre-exempt for benefit only, N = ERISA information not collected.</description>
        <label>ERISA Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP = ERISA applies to plan</fullName>
                </value>
                <value>
                    <fullName>EX = Exempt from</fullName>
                </value>
                <value>
                    <fullName>PE = Pre-exempt for benefit only</fullName>
                </value>
                <value>
                    <fullName>N = ERISA information not collected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>This field is used to capture the date the Benefit Agreement was effective as listed in BlueStar</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Indicator__c</fullName>
        <description>This field is used to capture the Exchange Indicator (BLM if Bloom Benefit Agreement) as listed in BlueStar</description>
        <label>Exchange Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BLM if Bloom Benefit Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>This field is used to capture the unique identifier for the Benefit Agreement</description>
        <externalId>true</externalId>
        <label>Benefit Agreement ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extra_Teritorial_ET_Rule_Code__c</fullName>
        <description>This field is used to capture whether ET Rules apply.  ET rules are laws that apply to residence of a state, even when the contract is situated outside of the state.  The basis for these laws is the state the subscriber lives in.</description>
        <label>Extra Teritorial (ET) Rule Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Teritorial_Rule_Code_Date__c</fullName>
        <description>This field is used to capture the first date the ET regulations are in effect.</description>
        <label>Extra Teritorial Rule Code Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Age__c</fullName>
        <label>From Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <description>This field is used to capture the financial billing arrangement that an account designates for the Benefit Agreement.</description>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACAP</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>COST</fullName>
                </value>
                <value>
                    <fullName>MPP</fullName>
                </value>
                <value>
                    <fullName>PAR</fullName>
                </value>
                <value>
                    <fullName>PREM</fullName>
                </value>
                <value>
                    <fullName>SERV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GS_Assigned_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GS Assigned Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Account__c</fullName>
        <description>This field is used to capture the Group Account associated to the Benefit Agreement</description>
        <label>Group Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benefit Agreements</relationshipLabel>
        <relationshipName>Benefit_Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Group_Section_Assigned_Count__c</fullName>
        <label>Group Section Assigned Count</label>
        <summaryForeignKey>BA_GS_Assignment__c.Benefit_Agreement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Group_Section_Assigned_Effective_Date__c</fullName>
        <description>This field is used to capture the date that the Benefit Agreement was assigned to a Group Section.</description>
        <label>Group Section Assigned Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Section_Assigned_End_Date__c</fullName>
        <description>This field is used to capture the date that the Benefit Agreement is no longer assigned to a Group Section.</description>
        <label>Group Section Assigned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HCR_Compliance_Date__c</fullName>
        <description>This field is used to capture the Health Care Reform grandfathering date as listed in BlueStar</description>
        <label>HCR Compliance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HCR_Compliance_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture the Health Care Reform grandfathering Indicator as listed in BlueStar</description>
        <label>HCR Compliance Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HIPPAA_Change_Effective_Date__c</fullName>
        <description>This field is used to capture the first date a HIPPAA change becomes effective.</description>
        <label>HIPPAA Change Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HIPPAA_Complience_Date__c</fullName>
        <description>This field is used to capture the first date the HIPPAA requirements were met.</description>
        <label>HIPPAA  Compliance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HIPPAA_Status_Code__c</fullName>
        <description>This field is used to capture compliance with the HIPPAA requirements.</description>
        <label>HIPPAA Status Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Benefit_SITUS_Code__c</fullName>
        <description>This field is used to capture the state having the primary authority for regulating and governing the account&apos;s Insurance contract.  Knowing a group&apos;s SITUS allows for determination of extraterritorial requirements.</description>
        <label>Health Benefit SITUS-Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Rating_Area_Number__c</fullName>
        <label>Health Rating Area Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Type_Code__c</fullName>
        <label>Insurance Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invitro_Indicator__c</fullName>
        <label>Invitro Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Plan_Number__c</fullName>
        <description>This field is used to capture the market plan number for the Benefit Agreement as listed in BlueStar</description>
        <label>Market Plan Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maternity_Indicator__c</fullName>
        <label>Maternity Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Rate__c</fullName>
        <label>Member Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members_Cancelling__c</fullName>
        <description>This field is no longer used.</description>
        <label>Members Cancelling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members__c</fullName>
        <description>This field is no longer used.</description>
        <label>Members</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_Source__c</fullName>
        <description>This field is used to capture the source from where the record gets created through migrations.</description>
        <label>Migration Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <description>This field is used to capture the Network code for the ID format as listed in BlueStar</description>
        <label>Network</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NAT</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>EPP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_HCR_Compliance_Date__c</fullName>
        <description>This field is used to capture the earliest date the grandfather status = &apos;Y&apos; as listed in BlueStar</description>
        <label>Original HCR Compliance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to capture the plan associated to the Benefit Agreement as listed in BlueStar</description>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Benefit Agreements</relationshipLabel>
        <relationshipName>Benefit_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Premium_Type_Effective_Date__c</fullName>
        <description>This field is used to capture the first day that the premium funding type is effective as listed in BlueStar</description>
        <label>Premium Type Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Premium_Type__c</fullName>
        <description>This field is used to capture the specific code for the Benefit Agreement&apos;s premium financial arrangement as listed in BlueStar</description>
        <label>Premium Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Funding_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>RP</fullName>
                </value>
                <value>
                    <fullName>RC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>This field is used to capture the category of the product associated to the Benefit Agreement</description>
        <formula>Text(Product__r.Product_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Compliance_Date__c</fullName>
        <description>This field is used to capture the Product Compliance Date as listed in BlueStar</description>
        <label>Product Compliance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>This field is used to capture the broader family of the product associated to the Benefit Agreement</description>
        <formula>text(Product__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Old__c</fullName>
        <description>This field is no longer used</description>
        <label>Product Old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type_Code__c</fullName>
        <label>Product Type Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to capture the name of the product associated to the Benefit Agreement as listed in BlueStar</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>HCSC_Non_BlueStar_Product</value>
            </filterItems>
            <filterItems>
                <field>Product2.NotSimple__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>You must add only Non BlueSTAR products</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Benefit Agreements</relationshipLabel>
        <relationshipName>Benefit_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Seq_Number__c</fullName>
        <label>Rate Seq Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Structure_Type_Code__c</fullName>
        <label>Rate Structure Type Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Type_Code__c</fullName>
        <label>Rate Type Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <label>Region Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <description>This field is used to capture the date the Benefit Agreement will renew as listed in BlueStar</description>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Month__c</fullName>
        <description>This field is used to capture the month the Benefit Agreement will renew as listed in BlueStar</description>
        <label>Renewal Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Cancellation_Date__c</fullName>
        <description>This field is used to capture the date when the Benefit Agreement has been requested to be cancelled or reinstated</description>
        <label>Requested Cancellation/Reinstatemen Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shared_Accum_Effective_Date__c</fullName>
        <description>This field is used to capture the first day that Sharing Accums are effective as listed in BlueStar</description>
        <label>Shared Accum Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shared_Accum_Vender_Code__c</fullName>
        <description>This field is used to capture the HSA Vendor code as listed in BlueStar</description>
        <label>Shared Accum Vender Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_Accum__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if HSA is applicable to the Benefit Agreement as listed in BlueStar</description>
        <label>Shared Accum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field is used to capture if the Benefit Agreement is active or cancelled as listed in BlueStar</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_Loss_Type__c</fullName>
        <description>This field is used to capture whether the claim payment level when the paid claim exceed a specific limit over a set period of time as listed in BlueStar. This normally applies on ASO and Cost plus Accounts.</description>
        <label>Stop Loss Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Loss__c</fullName>
        <description>This field is used to capture whether Stop Loss applies to the Benefit Agreement as listed in BlueStar</description>
        <label>Stop Loss</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriber_Number__c</fullName>
        <label>Subscriber Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Aggregate_Seq__c</fullName>
        <label>Tier Aggregate Seq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Age__c</fullName>
        <label>To Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Dental_Original_Contribution_Count__c</fullName>
        <description>This field is used to capture the Total Dental Original Contribution Count as listed in BlueStar</description>
        <label>Total Dental Original Contribution Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Dental_Renewal_Contribution_Count__c</fullName>
        <description>This field is used to capture the Total Dental Renewal Contribtuion Count as listed in BlueStar</description>
        <label>Total Dental Renewal Contribution Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Benefit Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BA-{000000}</displayFormat>
        <label>Benefit Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefit Agreements</pluralLabel>
    <recordTypes>
        <fullName>BlueStar</fullName>
        <active>true</active>
        <description>Records that are sent from Bluestar</description>
        <label>BlueStar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_BlueStar</fullName>
        <active>true</active>
        <description>Benefit Agreements created in Salesforce for Non BlueStar products</description>
        <label>Non BlueStar</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>